--- a/my_store/static/css/style.css
+++ b/my_store/static/css/style.css
@@ -1,31 +1,64 @@
-html{
-  scroll-behavior: smooth;
-}
-
-.show-border{
-  border: 2px solid green;
-}
-
-.btn-dark{
-  border: 1px solid #525151;
+/* || General Styles */
+html, body{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 .viewer-body{
   background-color: #ffffff;
+  min-height: 100vh;
 }
 
-.news_panel{
-  background-color: #afafaf;
-  border: 2px solid #cfcfcf;
+.hidden{
+  display: none;
 }
 
-.inner-viewer{
-  padding: 10%;
+
+/* || Navbar Styles */
+.btn-dark{
+  border: 1px solid #525151;
 }
 
-.item-viewer{
-  background-color: #ffffff;
-  border: 2px solid #cfcfcf;
+#search_field{
+  margin-right: -73px;
+}
+
+
+
+/* || Footer Styles */
+footer{
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  color: white;
+  background-color: #2b2b29;
+}
+
+hr.light{
+  background-color: white;
+}
+
+
+/* || Home Styles */
+.h1{
+    color: white;
+    text-shadow: 3px 3px 6px black;
+}
+
+.carousel-inner{
+  height: 70vh;
+}
+
+.carousel-inner img{
+  object-fit: contain;
+}
+
+.carousel-caption{
+  top: 50%;
+  position: absolute;
+  transform: translateY(-50%);
 }
 
 .panel-header{
@@ -40,20 +73,26 @@ html{
   border-bottom-left-radius: 25px;
 }
 
-.item-title{
-  font-size: 150%;
+
+/* || Store Styles */
+#store-body > div{
+  width: 100vw
 }
 
-.item-is-avail{
-  background-color: #0aff1b;
+.submitted{
+  display: none;
+  cursor: not-allowed;
+  pointer-events: none;
+  content: "Pls Wait"
 }
 
-.item-not-avail{
-  background-color: #ff4545;
+.inner-viewer{
+  padding: 10%;
 }
 
-#search_field{
-  margin-right: -73px;
+.item-viewer{
+  background-color: #ffffff;
+  border: 2px solid #cfcfcf;
 }
 
 #my_products{
@@ -62,31 +101,164 @@ html{
   border-top: 3px solid #d6d6d6;
 }
 
+/* Tables */
+table{
+  width: 100% !important;
+}
+
+.dataTables_paginate > span > a{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.dataTables_paginate > *{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+/* Checkbox and form */
+.checkbox-cont{
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-cont > input[type="checkbox"]{
+  appearance: none;
+  -webkit-appearance: none;
+  height: 1rem;
+  width: 1rem;
+  background-color: #d5d5d5;
+  border-radius: 0.1rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkbox-cont > input[type="checkbox"]:after{
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content:  "\f00c";
+  font-size: 0.8rem;
+  color: white;
+  display: none;
+}
+
+.checkbox-cont > input[type="checkbox"]:hover{
+  background-color: #a5a5a5;
+}
+
+.checkbox-cont > input[type="checkbox"]:checked{
+  background-color: #5bcd3e;
+}
+
+.checkbox-cont > input[type="checkbox"]:checked:after{
+  display: block;
+}
+
+.number-form{
+  width: 100%;
+}
+
+/* Side Panel */
 .sp-head{
   background-color: #0244bf;
+  color: #ffffff;
   border-top-right-radius: 25px;
   border-top-left-radius: 25px;
 }
 
-.yow{
-  border-top: 3px solid #ffffff;
-  border-bottom: 3px solid #ffffff;
-  color: white;
+.sp-body{
+  background-color: #e8e8e8;
+  border-bottom-right-radius: 18px;
+  border-bottom-left-radius: 18px;
 }
 
 .amnt-md{
   font-size: 1rem;
 }
 
+
+/* || Product Details Styles */
+.image-cont{
+  width: 50%;
+}
+
+.image-cont > img{
+  object-fit: contain;
+  width: 100%;
+}
+
+
+/* || User & Admin Profiles Styles */
+.overflow{
+  overflow-wrap: break-word;
+}
+
+.ref-code-limit{
+  max-width: 40vw;
+}
+
+.False-formatting{
+  color: red;
+}
+
+.True-formatting{
+  color: green;
+}
+
+#order-details{
+  box-shadow: 3px 3px 5px 1px #454545;
+  padding: 2rem;
+  margin-bottom: 2rem;
+}
+
+
+/* || Unkown and searching */
+.message-form{
+  width: 100%;
+  height: auto;
+}
+
+.welcome-message{
+  font-size: 6rem;
+}
+
+
+
+/* || Responsive Styles */
+
+@media screen and (orientation:portrait){
+  .carousel-item{
+    height: 100%;
+  }
+
+}
+
+@media screen and (orientation:landscape){
+  .carousel-item{
+    width: 100%;
+  }
+
+  .carousel-inner img{
+    width: 100%;
+  }
+}
+
 /* XSmall */
 @media (max-width: 575px) {
-
 }
 
 /* Small */
 @media (max-width: 767px) {
   .change-bgColor{
     background-color: #0f0f0f;
+  }
+  img{
+    width: 200%;
+  }
+  .welcome-message{
+    font-size: 3rem;
   }
 }
 
@@ -103,11 +275,5 @@ html{
 
 /* Large */
 @media (max-width: 1199px) {
-
-}
-
-
-
-@media only screen and (max-width: 767px) {
 
 }
