--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,23 +1,24 @@
-{% extends "my_store/base.html" %}
-{% load crispy_forms_tags %}
+{% extends "my_store/base.html" %} 
+{% load crispy_forms_tags %} 
 {% block content %}
-  <div class="content-section container">
-    <form class="" method="POST">
-      {% csrf_token %}
-      <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Log In</legend>
-        {{ form|crispy }}
-      </fieldset>
+<div class="content-section container">
+  <form class="" method="POST">
+    {% csrf_token %}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Log In</legend>
+      {{ form|crispy }}
+    </fieldset>
 
-      <div class="form-group">
-        <button class="btn btn-outline-info" type="submit">Log In</button>
-      </div>
-    </form>
-
-    <div class="border-top pt-3">
-      <small class="text-muted">
-        Need an account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
-      </small>
+    <div class="form-group">
+      <button class="btn btn-outline-info" type="submit">Log In</button>
     </div>
+  </form>
+
+  <div class="border-top pt-3">
+    <small class="text-muted">
+      Need an account?
+      <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
+    </small>
   </div>
-{% endblock content %}
+</div>
+{% endblock %}
