--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -7,10 +7,11 @@
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">Register Now</legend>
         {{ form|crispy }}
+        {{ profile_form|crispy }}
       </fieldset>
 
       <div class="form-group">
-        <button class="btn btn-outline-info" type="submit">Sign Up</button>
+        <button id="register_btn" onclick="deactivate_me('#register_btn')" class="btn btn-outline-info" type="submit">Sign Up</button>
       </div>
     </form>
 
